[gd_scene load_steps=92 format=3 uid="uid://dql06euexqj2c"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_hs32l"]
[ext_resource type="Texture2D" uid="uid://b8efk5tuswtnb" path="res://assets/sprites/Player Death 64x64.png" id="2_0usdg"]
[ext_resource type="Texture2D" uid="uid://c5jpkoaethiys" path="res://assets/sprites/player run 48x48.png" id="2_ehjfe"]
[ext_resource type="Texture2D" uid="uid://bq87ssfitnljg" path="res://assets/sprites/dash.png" id="2_tvydr"]
[ext_resource type="Texture2D" uid="uid://bsil58pf7emss" path="res://assets/sprites/Player Idle 48x48.png" id="2_ubtq0"]
[ext_resource type="Texture2D" uid="uid://brf33bbgdueur" path="res://assets/sprites/Player Hurt 48x48.png" id="3_ir18o"]
[ext_resource type="Texture2D" uid="uid://dxpimc2636y3l" path="res://assets/sprites/player new jump 48x48.png" id="3_jq02y"]
[ext_resource type="Texture2D" uid="uid://cdg8x6nkkr0b2" path="res://assets/sprites/player wall slide 48x48.png" id="7_3g1nk"]
[ext_resource type="Texture2D" uid="uid://dhtr06moknadq" path="res://assets/sprites/Player Running Aiming 48x48.png" id="7_cbr00"]
[ext_resource type="Texture2D" uid="uid://6xfmlhvfbmad" path="res://assets/sprites/player shoot 2H 48x48.png" id="7_fqrf7"]
[ext_resource type="Texture2D" uid="uid://c6sg7nwsh5btd" path="res://assets/sprites/player katana attack-sheathe 80x64.png" id="7_ii2ke"]
[ext_resource type="Texture2D" uid="uid://cdjw3qsd4qhpv" path="res://assets/sprites/player katana continuous attack 80x64.png" id="11_gwd1d"]
[ext_resource type="Script" path="res://scripts/sword.gd" id="13_s404n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3qehp"]
atlas = ExtResource("2_tvydr")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tposi"]
atlas = ExtResource("2_tvydr")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifsic"]
atlas = ExtResource("2_tvydr")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlrg8"]
atlas = ExtResource("2_tvydr")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e4hi"]
atlas = ExtResource("2_tvydr")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1cvv"]
atlas = ExtResource("2_tvydr")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pow0o"]
atlas = ExtResource("2_tvydr")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhnny"]
atlas = ExtResource("2_tvydr")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_41fxo"]
atlas = ExtResource("2_tvydr")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcrhy"]
atlas = ExtResource("2_0usdg")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qovwg"]
atlas = ExtResource("2_0usdg")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwgdq"]
atlas = ExtResource("2_0usdg")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwbul"]
atlas = ExtResource("2_0usdg")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3goru"]
atlas = ExtResource("2_0usdg")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n7uu"]
atlas = ExtResource("2_0usdg")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfvm2"]
atlas = ExtResource("2_0usdg")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnfjv"]
atlas = ExtResource("2_0usdg")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_32o7f"]
atlas = ExtResource("2_0usdg")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wthp"]
atlas = ExtResource("2_0usdg")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfw51"]
atlas = ExtResource("3_jq02y")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qps7v"]
atlas = ExtResource("3_jq02y")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_preq2"]
atlas = ExtResource("3_jq02y")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4to47"]
atlas = ExtResource("3_jq02y")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojn01"]
atlas = ExtResource("3_jq02y")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rny00"]
atlas = ExtResource("3_jq02y")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7lnd"]
atlas = ExtResource("3_ir18o")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5jgb"]
atlas = ExtResource("3_ir18o")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8658"]
atlas = ExtResource("3_ir18o")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccqt8"]
atlas = ExtResource("3_ir18o")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gflbg"]
atlas = ExtResource("2_ubtq0")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqhu1"]
atlas = ExtResource("2_ubtq0")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgk0h"]
atlas = ExtResource("2_ubtq0")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bd21h"]
atlas = ExtResource("2_ubtq0")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n72j"]
atlas = ExtResource("2_ubtq0")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mogp2"]
atlas = ExtResource("2_ubtq0")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhvb6"]
atlas = ExtResource("2_ubtq0")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1726"]
atlas = ExtResource("2_ubtq0")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhrj7"]
atlas = ExtResource("2_ubtq0")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t5i5"]
atlas = ExtResource("2_ubtq0")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmf1q"]
atlas = ExtResource("7_ii2ke")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0okyd"]
atlas = ExtResource("7_ii2ke")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1i6v8"]
atlas = ExtResource("7_ii2ke")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sw8bd"]
atlas = ExtResource("7_ii2ke")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ig4ew"]
atlas = ExtResource("7_cbr00")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pygb6"]
atlas = ExtResource("7_cbr00")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_01354"]
atlas = ExtResource("7_cbr00")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei74h"]
atlas = ExtResource("7_cbr00")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_poklo"]
atlas = ExtResource("7_cbr00")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5rh1"]
atlas = ExtResource("7_cbr00")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qyiv"]
atlas = ExtResource("7_cbr00")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnv14"]
atlas = ExtResource("7_cbr00")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ishe"]
atlas = ExtResource("7_fqrf7")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dyg5"]
atlas = ExtResource("7_fqrf7")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vw3tf"]
atlas = ExtResource("7_fqrf7")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndhnn"]
atlas = ExtResource("7_fqrf7")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbf8u"]
atlas = ExtResource("7_fqrf7")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2o8q"]
atlas = ExtResource("7_fqrf7")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_212o8"]
atlas = ExtResource("7_fqrf7")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rcrq"]
atlas = ExtResource("7_fqrf7")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mg00g"]
atlas = ExtResource("7_fqrf7")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc35r"]
atlas = ExtResource("7_fqrf7")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5620"]
atlas = ExtResource("2_ehjfe")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8u2w"]
atlas = ExtResource("2_ehjfe")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppp0b"]
atlas = ExtResource("2_ehjfe")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oth7m"]
atlas = ExtResource("2_ehjfe")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_us4kf"]
atlas = ExtResource("2_ehjfe")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u4pg"]
atlas = ExtResource("2_ehjfe")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpgch"]
atlas = ExtResource("2_ehjfe")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac124"]
atlas = ExtResource("2_ehjfe")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxyl5"]
atlas = ExtResource("11_gwd1d")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5uk8"]
atlas = ExtResource("11_gwd1d")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_klc5v"]
atlas = ExtResource("11_gwd1d")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjnlw"]
atlas = ExtResource("7_3g1nk")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xplme"]
atlas = ExtResource("7_3g1nk")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_12wig"]
atlas = ExtResource("7_3g1nk")
region = Rect2(96, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_lxnll"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qehp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tposi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifsic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlrg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e4hi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1cvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pow0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhnny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41fxo")
}],
"loop": true,
"name": &"dash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcrhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qovwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwgdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwbul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3goru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5n7uu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfvm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnfjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32o7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wthp")
}],
"loop": true,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfw51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qps7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_preq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4to47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojn01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rny00")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7lnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5jgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8658")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccqt8")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gflbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqhu1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgk0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bd21h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5n72j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mogp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhvb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1726")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhrj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t5i5")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmf1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0okyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1i6v8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sw8bd")
}],
"loop": false,
"name": &"idle_sword",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ig4ew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pygb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01354")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei74h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_poklo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5rh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qyiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnv14")
}],
"loop": false,
"name": &"player_run_shoot",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ishe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dyg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vw3tf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndhnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbf8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2o8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_212o8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rcrq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mg00g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc35r")
}],
"loop": false,
"name": &"player_shoot",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5620")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8u2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppp0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oth7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_us4kf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u4pg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpgch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac124")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxyl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5uk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klc5v")
}],
"loop": false,
"name": &"run_sword",
"speed": 10.0
}, {
"frames": [],
"loop": true,
"name": &"sword slash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjnlw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xplme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12wig")
}],
"loop": true,
"name": &"wall_slide",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t0378"]
radius = 6.0
height = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b241h"]
size = Vector2(44, 26)

[node name="player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_hs32l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3, -4)
sprite_frames = SubResource("SpriteFrames_lxnll")
animation = &"run_sword"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
shape = SubResource("CapsuleShape2D_t0378")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="sword" type="Area2D" parent="."]
collision_mask = 2
monitoring = false
script = ExtResource("13_s404n")

[node name="collision_shape" type="CollisionShape2D" parent="sword"]
position = Vector2(20, -1)
shape = SubResource("RectangleShape2D_b241h")

[node name="projectile_barrel_Left" type="Marker2D" parent="."]
position = Vector2(-11, -15)

[node name="projectile_barrel_Right" type="Marker2D" parent="."]
position = Vector2(14, -15)

[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="body_entered" from="sword" to="sword" method="_on_body_entered"]
